# SparseTexture

./: .gitignore  README.md  generate_plots.ps1
Code/: CMakeLists.txt  NVIDIA RTX A6000 572.83.0.0.txt  VulkanObjects.cpp  VulkanObjects.h  main.cpp
Runs/: AMD Radeon RX 7900 XT 2.0.331.txt  AMD Radeon(TM) 8060S Graphics 2.0.317.txt  Arch NVIDIA RTX A6000 (NVK GA102) 25.0.0.4.txt  Arch NVIDIA RTX A6000 550.163.1.0.txt  Arch NVIDIA RTX A6000 570.144.0.0.txt  Arch NVIDIA RTX A6000 575.57.8.0.txt  Intel(R) Arc(TM) A770 Graphics 101.6734.txt  NVIDIA RTX 6000 Ada Generation 553.62.0.0 Dynamic Streaming.txt  NVIDIA RTX 6000 Ada Generation 553.62.0.0.txt  NVIDIA RTX 6000 Ada Generation 576.2.0.0.txt  NVIDIA RTX A5000 Laptop GPU 550.120.0.0.txt  NVIDIA RTX A6000 572.83.0.0.txt  NVIDIA RTX A6000 576.2.0.0.txt  Ubuntu2404 NVIDIA RTX A2000 12GB 550.120.0.0.txt  Ubuntu2404 NVIDIA RTX A2000 12GB 570.133.7.0.txt  Win1124H2 Ada6000 576.2.0.0.txt
Scripts/: Dockerfile  build.sh  run.sh
